# PixelEngine

./: CMakeLists.txt
PixelEngineCore/: CMakeLists.txt
PixelEngineCore/includes/PixelEngineCore/: Window.h
PixelEngineCore/src/PixelEngineCore/: Window.cpp
PixelEngineEditor/: CMakeLists.txt
PixelEngineEditor/src/: main.cpp
